--- a/app/src/main/res/layout/addtask_frag.xml
+++ b/app/src/main/res/layout/addtask_frag.xml
@@ -41,7 +41,12 @@
             android:layout_height="50dp"
             android:gravity="top"
             android:hint="@string/description_hint" />
-
+        <EditText
+            android:id="@+id/add_task_imageUrl"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="top"
+            android:hint="@string/description_hint" />
 
         <Button
             android:id="@+id/btntakephoto"
