--- a/app/src/main/res/layout/taskdetail_frag.xml
+++ b/app/src/main/res/layout/taskdetail_frag.xml
@@ -45,5 +45,12 @@
         android:layout_height="wrap_content"
         android:text="Medium Text"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
+    <TextView
+        android:id="@+id/task_detail_imageUrl"
+        android:layout_toRightOf="@id/task_detail_complete"
+        android:layout_below="@id/task_detail_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Medium Text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </RelativeLayout>
