--- a/app/src/main/res/layout/taskdetail_frag.xml
+++ b/app/src/main/res/layout/taskdetail_frag.xml
@@ -36,15 +36,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
     <TextView
-        android:id="@+id/task_detail_description"
+        android:id="@+id/task_detail_history"
         android:layout_toRightOf="@id/task_detail_complete"
         android:layout_below="@id/task_detail_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Medium Text"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    <TextView
+        android:id="@+id/task_detail_description"
+        android:layout_toRightOf="@id/task_detail_complete"
+        android:layout_below="@id/task_detail_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Medium Text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
     <TextView
         android:id="@+id/task_detail_imageUrl"
         android:layout_toRightOf="@id/task_detail_complete"
