--- a/app/src/main/res/layout/addtask_frag.xml
+++ b/app/src/main/res/layout/addtask_frag.xml
@@ -34,7 +34,12 @@
             android:hint="@string/title_hint"
             android:singleLine="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
+        <EditText
+            android:id="@+id/add_task_history"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="top"
+            android:hint="@string/description_hint" />
         <EditText
             android:id="@+id/add_task_description"
             android:layout_width="match_parent"
