--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -29,19 +29,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical" />
-    <ImageView
-        android:id="@+id/imageV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="wrap_content"
+        android:paddingBottom="4dip"
+        android:paddingLeft="12dip">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:id="@+id/imageV"
+            android:layout_height="fill_parent">
+        </ImageView>
+        <TextView
+            android:text="TextView01"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:id="@+id/title"
+            android:layout_toRightOf="@+id/imageV"
+            android:textSize="20dip">
+        </TextView>
+        <TextView
+            android:text="TextView02"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:id="@+id/history"
+            android:layout_toRightOf="@+id/imageV"
+            android:layout_below="@+id/title">
+        </TextView>
+    </RelativeLayout>
 </LinearLayout>
